# agentic-architecture

./: .env.example  .gitignore  INTENT_CLASSIFICATION.md  MongoConfig.md  README.md  app.py  architecture_diagram.md  check_mongodb.py  get_patient_example.py  initial_data.py  main.py  main2.py  pyproject.toml  test_get_patient_tool.py  utils.py
agents/: requirements.txt
agents/base/: base_agent.py
agents/specialized/: intent_classifier_agent.py  medical_expert_agent.py  mongodb_agent.py  pharmacist_agent.py  product_availability_agent.py  query_classifier_agent.py  query_understanding_agent.py  response_formatting_agent.py
agents/tools/: product_tools.py  registry.py  translation_tools.py
agents/tools/collection/: list_collections.py
agents/tools/documents/: count.py  delete_one.py  find.py  insert_one.py  update_one.py
agents/tools/indexes/: create_index.py  drop_index.py  list_indexes.py
agents/tools/patient/: create_patient_profile.py  get_patient.py
agents/utils/: translation_utils.py
backend/: app.py  crm_testing.py  get_patient_example.py  main.py  main2.py  pyproject.toml  requirements.txt  run_streamlit.py  server.py  test_qontak_crm.py  utils.py
backend/app/agents/: README.md  mongodb_agent.py  requirements.txt
backend/app/agents/base/: base_agent.py
backend/app/agents/specialized/: example_usage.py  medical_expert_agent.py  mongodb_agent.py  pharmacist_agent.py  pharmacist_usage_example.py
backend/app/agents/tools/: registry.py
backend/app/agents/utils/: serialization_utils.py
backend/app/api/: main.py
backend/app/api/routes/: login.py  qontak_webhook.py
backend/app/core/: config.py
backend/app/core/graph/: agent_graph.py
backend/app/core/moderation/: __init__.py  fallback_handler.py
backend/app/mongodb/: mongodb_setup.py
backend/app/services/: qontak_crm_service.py
backend/test_logics/: check_mongodb.py  insert_patient_info.py  remove_pycache.py  test_imports.py
config/: config.py
core/: __init__.py
core/chatbot/: agents.py  fallback_handler.py  mongo_chatbot.py
core/graph/: agent_graph.py
core/state/: agent_state.py
email-templates/src/: fallback_support.mjml
mongodb/: client.py  mongodb_setup.py  schema.py
(+14 files in other folders)
