[project]
name = "ai-agents"
version = "0.1.0"
description = "AI Agents with LangGraph and MongoDB integration"
authors = [
    {name = "bwithai",email = "sanaullah41821@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai (>=1.76.2,<2.0.0)",
    "pymongo (>=4.12.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langchain-mongodb (>=0.6.1,<0.7.0)",
    "langgraph (>=0.4.1,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
]

[tool.poetry]
name = "ai-agents"
version = "0.1.0"
description = "AI Agents with LangGraph and MongoDB integration"
authors = ["bwithai <sanaullah41821@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
